# dcp-factor

./: .gitignore  README.md  adaptive_base_algorithm.js  algorithm.js  basic_algorithm.js  basic_wasm_algorithm.js  benchmark.js  common.js  dcp-integration.js  digital-sieve.html  index.html  parallel_base_exploration.js  pixi.toml  pruning_algorithm.js  pruning_algorithm.py  test_adaptive_python.py
dcp-mojo-variant/: README.md  run-factor-mojo.js
docs/: PRUNING_HEURISTICS.md
ivi_wasm/: Cargo.toml  README.md
ivi_wasm/src/: lib.rs
mojo/: README.md  ivi_base.mojo
python/: ivi_bridge.py  ivi_worker_stdin.py
