[package]
name = "ivi_wasm"
version = "0.1.0"
edition = "2021"
description = "IVI base work function compiled to WebAssembly for the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
